--- a/styles.css
+++ b/styles.css
@@ -1,101 +1,186 @@
+:root {
+    --primary-color: #87CEEB;
+    --accent-color: green;
+    --hdr-ht: 75px;
+    --footer-ht: 45px;
+    --main-ht: calc(100vh - calc(var(--hdr-ht) + var(--footer-ht)));
+}
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 body {
     min-width: 300px;
 }
-#header {
-    background-color: #87CEEB;
-    color: #fff;
-    padding: 15px;
-    box-shadow: 0px 0px 5px 0px;
+
+/* ============= */
+/* header styles */
+/* ============= */
+
+.hdr-container {
     position: -webkit-sticky;
     position: sticky;
     top: 0;
+    height: var(--hdr-ht);
+    background-color: var(--primary-color);
+    color: rgb(18, 18, 18);
+    display: flex;
+    justify-content: center;
+    align-items: center;
     z-index: 10;
-}
-#header p {
-    width: fit-content;
-    font-size: 3.5vw;
-    margin: 0 auto;
-}
-.container {
-    height: 85vh;
-}
-.cover {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    min-width: 1000px;
-    z-index: -1;
-}
-#img {
-    object-fit: cover;
-    width: 100%;
-}
-.row {
-    width: 100%;
-    padding: 50px 15px;
-}
-#response {
-    background-color: #E9FF00;
-    color: #1600FF;
-    font-weight: 900;
-    opacity: 1;
-    padding: 9px 25px;
-    border-radius: 50px;
+    box-shadow: 0px 0px 5px 0px;
 }
 
-/* footer styles */
-footer {
-    background-color: #87CEEB;
-    color: #000;
-    padding: 11px;
+.hdr-container h1 {
+    font-weight: bold;
+    font-size: 1.9rem;
+    white-space: nowrap;
+
 }
+
+/* =========== */
+/* main styles */
+/* =========== */
+
+main.container {
+    height: var(--main-ht);
+    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(./assets/city-weather02.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+}
+
+form {
+    display: flex;
+    gap: 15px;
+    justify-content: center;
+    align-items: center;
+}
+
+#city-lbl {
+    display: none;
+}
+
+input {
+    outline: none;
+    border: 1px solid rgba(0, 0, 0, .5);
+    padding: 5px 10px;
+    font-size: .92rem;
+    min-width: 250px;
+    border-radius: 3px;
+    height: 45px;
+    box-shadow: 0px 4px 5px 0px rgba(0, 0, 0, .3);
+}
+
+input:focus {
+    border: 2px solid var(--primary-color);
+    box-shadow: 0px 4px 5px 0px rgba(137, 207, 235, .3);
+}
+
+.submit-btn {
+    min-width: 200px;
+    font-size: 1rem;
+    height: 45px;
+    background-color: var(--accent-color);
+    color: #fff;
+    border: none;
+    border-radius: 3px;
+    box-shadow: 0px 4px 5px 0px rgba(0, 0, 0, .3);
+    cursor: pointer;
+}
+
+.reset-btn {
+    font-size: .9rem;
+    height: 45px;
+    background-color: var(--primary-color);
+    color: #000;
+    padding: 15px;
+    border: none;
+    border-radius: 3px;
+    box-shadow: 0px 4px 5px 0px rgba(0, 0, 0, .3);
+    cursor: pointer;
+}
+
+:where(.submit-btn, .reset-btn):hover {
+    filter: brightness(.9);
+    transition: .3s;
+}
+
+.response {
+    background-color: rgba(0, 128, 0, .5);
+    color: #fff;
+    width: clamp(250px, 750px, 90%);
+    height: 200px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 2rem;
+    padding: 15px;
+    text-align: center;
+    border-radius: 10px;
+    opacity: 0;
+}
+
+.show-response {
+    opacity: 1;
+    transition: .5s;
+}
+
+/* ============= */
+/* footer styles */
+/* ============= */
+
+footer {
+    height: var(--footer-ht);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: var(--primary-color);
+    color: rgb(18, 18, 18);
+}
+
 .footer-text {
     font-size: 1em;
     width: fit-content;
     margin: 0 auto;
 }
-.footer-text span {
+
+a {
+    text-decoration: none;
+}
+
+.red1dev-link {
+    color: var(--accent-color);
     font-weight: bold;
 }
 
-/* responsive */
+/* ====================== */
+/* screens responsiveness */
+/* ====================== */
 
-@media screen and (max-width: 1100px) {
-    #header p {
-        font-size: 4vw;
-    } 
-}
-@media screen and (max-width: 800px) {
-    #header p {
-        font-size: 4.5vw;
+@media screen and (max-width: 600px) {
+    .hdr-container h1 {
+        font-size: 1.35rem;
+    }
+
+    form {
+        flex-direction: column;
+    }
+
+    .submit-btn, .reset-btn {
+        width: 100%;
     }
 }
-@media screen and (max-width: 650px) {
-    #header p {
-        font-size: 5vw;
-    }
-}
-@media screen and (max-width: 500px) { 
-    #header p {
-        font-size: 5.5vw;
-        font-weight: 700;
-    }  
-}
+
 @media screen and (max-width: 400px) {
-    #header {
-        padding: 15px 9px;
-    } 
-    #header p {
-        font-size: 5.5vw;
-        font-weight: 700;
-    }  
+    .hdr-container h1 {
+        font-size: 1rem;
+    }
 }
-@media screen and (max-width: 300px) {
-    #header p {
-        font-size: 100%;
-        font-weight: 700;
-    } 
-}
-
-/* THE END */
