--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 :root {
-    --primary-color: #87CEEB;
+    --primary-color: #87ceeb;
     --accent-color: green;
     --hdr-ht: 75px;
     --footer-ht: 45px;
@@ -14,6 +14,10 @@
 
 body {
     min-width: 300px;
+    background: linear-gradient(rgba(135, 206, 235, .4), rgba(135, 206, 235, .4)), url(./assets/city-weather02.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
 }
 
 /* ============= */
@@ -25,7 +29,7 @@ body {
     position: sticky;
     top: 0;
     height: var(--hdr-ht);
-    background-color: var(--primary-color);
+    background-color: rgba(135, 206, 235, .55);
     color: rgb(18, 18, 18);
     display: flex;
     justify-content: center;
@@ -38,7 +42,6 @@ body {
     font-weight: bold;
     font-size: 1.9rem;
     white-space: nowrap;
-
 }
 
 /* =========== */
@@ -47,10 +50,6 @@ body {
 
 main.container {
     height: var(--main-ht);
-    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(./assets/city-weather02.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
@@ -74,13 +73,14 @@ input {
     padding: 5px 10px;
     font-size: .92rem;
     min-width: 250px;
-    border-radius: 3px;
     height: 45px;
+    border: none;
+    border-radius: 5px;
     box-shadow: 0px 4px 5px 0px rgba(0, 0, 0, .3);
 }
 
 input:focus {
-    border: 2px solid var(--primary-color);
+    border: 3px solid green;
     box-shadow: 0px 4px 5px 0px rgba(137, 207, 235, .3);
 }
 
@@ -99,7 +99,7 @@ input:focus {
 .reset-btn {
     font-size: .9rem;
     height: 45px;
-    background-color: var(--primary-color);
+    background-color: orange;
     color: #000;
     padding: 15px;
     border: none;
@@ -113,23 +113,34 @@ input:focus {
     transition: .3s;
 }
 
-.response {
-    background-color: rgba(0, 128, 0, .5);
-    color: #fff;
-    width: clamp(250px, 750px, 90%);
-    height: 200px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 2rem;
-    padding: 15px;
-    text-align: center;
-    border-radius: 10px;
-    opacity: 0;
+:where(.submit-btn, .reset-btn):disabled {
+    filter: brightness(1);
+    cursor: zoom-in;
+    opacity: .75;
 }
 
-.show-response {
-    opacity: 1;
+#success-response, #err-msg {
+    color: #fff;
+    width: clamp(250px, 90%, 750px);
+    margin-inline: auto;
+    font-size: 1.5rem;
+    padding: 25px 15px;
+    border-radius: 10px;
+}
+
+#success-response {
+    display: none;
+    background-color: rgba(0, 128, 0, .7);
+}
+
+#err-msg {
+    display: none;
+    background-color: rgba(128, 0, 0, 0.7);
+    font-size: 1rem;
+}
+
+.display-msg {
+    display: block;
     transition: .5s;
 }
 
@@ -142,7 +153,7 @@ footer {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: var(--primary-color);
+    background-color: rgba(135, 206, 235, .55);
     color: rgb(18, 18, 18);
 }
 
